--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -61,25 +61,33 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check out repo
+      - name: 📥 Check out repo
         uses: actions/checkout@v3
 
-      - name: Set up R
+      - name: 📦 Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: 🐍 Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: 📢 Echo Inputs 
+        run: |
+          echo -e "\e[1;34mNotebook Name:\e[0m ${{ github.event.inputs.name }}"
+          echo -e "\e[1;34mExecuting Notebook:\e[0m ${{ github.event.inputs.notebook }}"
+          echo -e "\e[1;34mDataset URL:\e[0m ${{ github.event.inputs.dataset }}"
+          echo -e "\e[1;34mAlgorithm URL:\e[0m ${{ github.event.inputs.algorithm }}"      
+
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install -e '.[all]'
           pip install flake8
           pip list
           python -m rpy2.situation
-      - name: Download basic datasets
+          
+      - name: 📊 Download basic datasets
         run: |
           wget ${UCI_DB}/adult/adult.data -P aif360/data/raw/adult/
           wget ${UCI_DB}/adult/adult.test -P aif360/data/raw/adult/
@@ -89,14 +97,16 @@ jobs:
           wget ${PROPUBLICA_GH}/compas-scores-two-years.csv -P aif360/data/raw/compas/
           wget ${UCI_DB}/00222/bank-additional.zip -P aif360/data/raw/bank/ && unzip -j aif360/data/raw/bank/bank-additional.zip -d aif360/data/raw/bank/ && rm aif360/data/raw/bank/bank-additional.zip
           (cd aif360/data/raw/meps;Rscript generate_data.R <<< y)
-      - name: Download extra datasets
+          
+      - name: 📊 Download extra datasets
         run: |
           if [ -n "${{ inputs.dataset }}" ]; then
             wget ${{ inputs.dataset }}
           else
             echo "No dataset URL provided. Skipping download."
           fi
-      - name: Unzip or untar the downloaded dataset
+          
+      - name: 📂 Unzip or untar the downloaded dataset
         if: ${{ inputs.dataset }}
         run: |
           mkdir -p temp_folder
@@ -108,7 +118,7 @@ jobs:
             echo "No zip or tar.gz file found. Skipping extraction."
           fi
       
-      - name: Copy CSV files to github workspace
+      - name: 📄 Copy CSV files to github workspace
         run: |
               if [ -d temp_folder ]; then
                 find temp_folder -type f -name "*.csv" -exec cp -r {} ${{ github.workspace }}/examples \;
@@ -116,27 +126,29 @@ jobs:
               else
                 echo "Error:No CSV file found."
               fi
-      - name: List all the files in directory
+      - name: 📋 List all the files in directory
         run: ls -a
 
-      - name: Lint with flake8
+      - name: 🧹Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Divert to Jupyter notebook directory
+          
+      - name: 📒 Divert to Jupyter notebook directory
         run:  |
               cd ${{ github.workspace }}/examples
               ls -a
         
-      - name: Execute Jupyter Notebook
+      - name: 🚀 Execute Jupyter Notebook
         run: |
            cd ${{ github.workspace }}/examples
            pwd
            # Execute the Jupyter notebook and save the output to a new notebook
            jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }}
-      - name: commit updated notebook
+      
+      - name: 📝 commit updated notebook
         uses: EndBug/add-and-commit@v7
         with:
           author_name: Plot update bot
@@ -144,17 +156,18 @@ jobs:
           add: "${{ github.workspace }}/automation/${{ github.event.inputs.name }}"
         
         # Add a new step to commit and push the changes
-      - name: Commit and Push Changes
+      - name: 🔀 Commit and Push Changes
         run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
-      - name: Persist Logs
+          
+      - name: 📂 Persist Logs
         run: |
           mkdir -p ${{ github.workspace }}/automation/artifacts
           cp ${{ github.workspace }}/automation/${{ github.event.inputs.name }} ${{ github.workspace }}/automation/artifacts/
         if: ${{ always() }}
 
-      - name: Upload Artifacts
+      - name: 📤 Upload Artifacts
         uses: actions/upload-artifact@v2
         if: always()
         with:
@@ -162,32 +175,41 @@ jobs:
           path: ${{ github.workspace }}/automation/artifacts         
       
   build-r:
-    runs-on: ubuntu-latest
+   runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.11]
+   # Define strategy for job execution
+   strategy:
+    fail-fast: false
+    # Matrix strategy allows running multiple configurations
+    matrix:
+      python-version: [3.11]
 
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v3
+   steps:
+    # Checkout the repository
+    - name: 📥 Check out repo 
+      uses: actions/checkout@v3
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
+    # Set up R environment
+    - name: 📦 Set up R 
+      uses: r-lib/actions/setup-r@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
+    # Set up Python environment
+    - name: 🐍 Set up Python ${{ matrix.python-version }} 
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
 
-      - name: Install R dependencies
-        run: install.packages(c("reticulate", "rstudioapi", "testthat"))
-        shell: Rscript {0}
+    # Install R dependencies
+    - name: 📦 Install R dependencies 
+      run: install.packages(c("reticulate", "rstudioapi", "testthat"))
+      shell: Rscript {0}
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install '.[all]'
-      - name: Install R package
-        run: R CMD INSTALL aif360/aif360-r
+    # Install Python dependencies
+    - name: 📦 Install Python dependencies 
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install '.[all]'
+
+    # Install R package
+    - name: 📦 Install R package 
+      run: R CMD INSTALL aif360/aif360-r
