--- a/.github/workflows/ethaiaudithub-experiment-workflow.yml
+++ b/.github/workflows/ethaiaudithub-experiment-workflow.yml
@@ -104,13 +104,31 @@ jobs:
       - name: 📥 Check out repo 
         uses: actions/checkout@v3
     
-      - name: 📦 Set up R 
+      - name: 📦 Set up R
         uses: r-lib/actions/setup-r@v2
-    
-      - name: 🐍 Set up Python ${{ matrix.python-version }} 
+
+        # Cache R packages
+      - name: 💰 Cache R packages 
+        uses: actions/cache@v2
+        with:
+          path: ~/.local/lib/R/site-library
+          key: ${{ runner.os }}-R-${{ hashFiles('**/DESCRIPTION') }}
+          restore-keys: |
+            ${{ runner.os }}-R-
+
+      - name: 🐍 Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
+      # Cache Python packages
+      - name: 💵 Cache Python packages 
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
     
       - name: 📢 Echo Inputs 
         run: |
