--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -168,9 +168,12 @@ jobs:
            
            # Create an empty file for capturing the stack trace
            touch ipynb_execution.txt
+
+           # Give write access to .txt
+           chmod +x ipynb_execution.txt
            
            # Execute the Jupyter notebook and save the output to a new notebook
-           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }} 2> ipynb_execution.txt
+           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }} ipynb_execution.txt 2>&1 || true
       
       - name:  📄 Log ipynb execution stack trace
         uses: actions/upload-artifact@v2
