fix: 2>&1 | tee -a ipynb_execution.txt

--- a/.github/workflows/ethaiaudithub-experiment-workflow.yml
+++ b/.github/workflows/ethaiaudithub-experiment-workflow.yml
@@ -205,7 +205,7 @@ jobs:
            chmod +x ipynb_execution.txt
            
            # Execute the Jupyter notebook and save the output to a new notebook
-           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }} > ipynb_execution.txt 2>&1 || true
+           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }} 2>&1 | tee -a ipynb_execution.txt
            
       - name:  📄 Log ipynb execution stack trace
         uses: actions/upload-artifact@v2
